3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Apply patch #1713564, Open log file only once with -detach, courtesy Kari Pahula.
 include/sproto.h
 server/daemon.c init.c
Nicolas Weeger 2007-05-05

Implement feature request #1657735: Server setting for handling 'incorrect' converters.
New server setting, 'allow_broken_converters', that controls what to do.
 common/init.c
 include/global.h
 lib/settings
 server/init.c
 types/converter/converter.c
Nicolas Weeger 2007-05-05

types/legacy/apply.c: fix broken LIGHTER.
Nicolas Weeger 2007-05-05

Fix some type issues in plugin. Wrap change_abil(). Add set_resist(). Add duration property.
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 server/plugins.c
Nicolas Weeger 2007-05-05

random_maps/random_map.c: initialize random map's reset time, so town portal works
 correctly there too.
Nicolas Weeger 2007-05-04

Fix misc compilation warnings. Remove duplicate function.
 include/sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython.c cfpython_object.c
 server/plugins.c
Nicolas Weeger 2007-04-30

server/c_misc.c: ensure you can't harvest items already harvested, or skills and such.
Nicolas Weeger 2007-04-30

server/monster.c: fix bug #1709618: Text message is too long/truncated.
Nicolas Weeger 2007-04-30

Partially implement feature request #1668158: Better nethack implementation.
Random maps now have a new 'multiple_floors' parameter that, if set, will
make the different rooms of the map have different floors.